--- a/lab3/main/templates/main.html
+++ b/lab3/main/templates/main.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <h1>London is the capital of great britaine</h1>
+    <p>{{ parameter }}</p>
   <script src="js/scripts.js"></script>
 </body>
 </html>
